--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -5,7 +5,7 @@
 Install pipenv:
 
 ```bash
-pip3 install pipenv
+pip install pipenv
 ```
 
 Now, move to the directory where you want the virtual environment to be, then run:
