improve earlier notes

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -55,6 +55,10 @@ Ultimate Djangosamyak@Mac Ultimate Django %
 
 That is, the directory name appears as a prefix before `samyak@Mac`.
 
+## Using the Integrated Terminal in VSCode
+
+Important: VS Code activates the venv in the terminal automatically when the Python interpreter of current project is set to the venv one. Else, it does not.
+
 ## Creating Your First App
 
 https://en.wikipedia.org/wiki/Django_(web_framework):
@@ -86,11 +90,17 @@ See `INSTALLED_APPS` in `settings.py`.
 
 Views or view functions take a request and return a response.
 
+## Mapping URLs to Views
+
 ## Using Templates
 
 We can replace Django's default template engine with a preferred template engine if we want.
 
 > Important: We don't use templates in Django that often now. Django is primarily used to build APIs.
+
+## Debugging Django Applications in VSCode
+
+Similar to normal Python debugger.
 
 ## Using Django Debug Toolbar
 
