--- a/Notes/Part 1/2. Building a Data Model.md
+++ b/Notes/Part 1/2. Building a Data Model.md
@@ -2,9 +2,11 @@
 
 Types of relationships:
 
-- One to One
-- One to Many
-- Many to Many
+- One to One (`OneToOneField`)
+- One to Many (`ForeignKey`)
+- Many to Many (`ManyToManyField`)
+
+## Building an E-commerce Data Model
 
 ## Organizing Models in Apps
 
@@ -38,7 +40,7 @@ https://docs.python.org/3/library/decimal.html#module-decimal:
 > The `decimal` module provides support for fast correctly rounded decimal floating-point arithmetic.
 
 **Conclusion:**  
-`FloatField` has rounding errors, hence, always use `DecimalField` for sensitive fields like monetory values, which should be completely accurate.
+`FloatField` has rounding errors, hence, always use `DecimalField` for sensitive fields like monetary values, which should be completely accurate.
 
 <br>
 
@@ -51,6 +53,8 @@ Why we should just use `CharField.max_length = 255` in most cases instead of mor
 
 **Note:**
 Django creates a primary key `id` for every model by default unless a field is explicitly defined with `primary_key=True`.
+
+## Choice Fields
 
 ## Defining One-to-one Relationships
 
@@ -89,6 +93,55 @@ But, only do this in case of circular relationship, not when you can just move t
 ## Defining Many-to-Many Relationships
 
 `models.ManyToManyField`
+
+### Important: How exactly many to many fields are stored in the DB?
+
+A many-to-many relationship isn't stored in a single database column. It's managed using a third, intermediate junction table (automatically created, named "app_name_modelname_field_name") that contains foreign keys to the two tables being linked. The "field" in your application code is an abstraction that runs `JOIN` queries on this junction table to get the related data.
+
+Read here: https://g.co/gemini/share/db60c19a2a87
+
+#### A Concrete Example: Students & Courses
+
+Let's model a classic M2M relationship: Students can enroll in many Courses, and a Course can have many Students.
+
+**Table: `Students`**
+| `id` (PK) | `name` |
+| :-------- | :----- |
+| 1         | Alice  |
+| 2         | Bob    |
+
+**Table: `Courses`**
+| `id` (PK) | `title`            |
+| :-------- | :----------------- |
+| 101       | Intro to SQL       |
+| 102       | Python Programming |
+
+Here is the crucial **junction table**, which we'll call `Enrollment`.
+
+**Table: `Enrollment`**
+(Primary Key is a composite of `student_id` and `course_id`)
+| `student_id` (FK) | `course_id` (FK) |
+| :---------------- | :--------------- |
+| 1                 | 101              |
+| 1                 | 102              |
+| 2                 | 102              |
+
+This structure tells us:
+
+- Alice (student `1`) is enrolled in SQL (course `101`) and Python (course `102`).
+- Bob (student `2`) is enrolled in Python (course `102`).
+
+To get all courses for Alice, the database would run a query similar to this:
+
+```sql
+SELECT C.id, C.title
+FROM Courses AS C
+INNER JOIN Enrollment AS E
+ON C.id = E.course_id
+WHERE E.student_id = 1;
+```
+
+> Remove `WHERE` clause to get all courses for all students.
 
 ## Resolving Circular Relationships
 
