--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -116,7 +116,7 @@ In DataGrip:
 **DataGrip Alt:**
 
 For small/basic tasks, just use VS Code extension [SQL Tools](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools), which works well!  
-Requires: VS Code extenstion [SQLTools PostgreSQL Driver](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools-driver-pg)
+Requires: VS Code extension [SQLTools PostgreSQL Driver](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools-driver-pg)
 
 ## Using ~~MySQL~~ PostgreSQL in Django
 
