improve earlier notes again

--- a/Notes/Part 1/2. Building a Data Model.md
+++ b/Notes/Part 1/2. Building a Data Model.md
@@ -78,8 +78,21 @@ In `Address` model:
 
 <br>
 
-Django automatically creates a reverse relationship named `address` in the parent class `Customer`.  
-But why? We can already get address from customer and vice versa, then why do we need this?
+### Auto Reverse Relationships
+
+In Django, when we define a relationship from one model to another, a **reverse relationship** is automatically created on the related (parent) model.
+
+- For example, Django adds a reverse relation on `Customer` named `address` by default.
+- The reverse relation name is:
+
+  - **`<modelname>`** — if it's a **OneToOneField**
+  - **`<modelname>_set`** — if it's a **ForeignKey** (One-to-Many) or **ManyToManyField**
+
+This allows you to access related objects from the parent model using the reverse name.
+
+> Doubt: We can already get address from customer and vice versa, then why exactly do we need this?
+> 
+> See the requirement in `playground.views.home` > "Selecting Related Objects" section > Exercise (in the end).
 
 ## Defining a One-to-Many Relationship
 
@@ -179,5 +192,3 @@ content_type = models.ForeignKey(to=ContentType, on_delete=...)
 object_id = models.PositiveIntegerField()
 content_object = GenericForeignKey()
 ```
-
-> Not completely understood...
