fix minor issues in notes using ai

--- a/Notes/Part 1/4. Django ORM.md
+++ b/Notes/Part 1/4. Django ORM.md
@@ -2,7 +2,7 @@
 
 Docs: https://docs.djangoproject.com/en/5.2/topics/db/queries
 
-### What problem does it solves?
+### What problem does it solve?
 
 We needed to do:
 
@@ -12,7 +12,7 @@ result = execute(sql)
 for row in result:
     product = Product()
     product.title = row['title']
-    produce.price = row['price']
+    product.price = row['price']
 ```
 
 [Object-Relational Mapping](https://en.wikipedia.org/wiki/Object–relational_mapping)
@@ -28,35 +28,35 @@ products = Product.objects.all()
 
 <br>
 
-Note that ORMs are bit slow compared to directly querying the DB due to the obvious reason. But, ORMs helps to ship the app fast. And for most apps, the slow speed is negligible.
+Note that ORMs are a bit slow compared to directly querying the DB due to the obvious reason. But ORMs help ship the app fast. And for most apps, the slow speed is negligible.
 
 > "Premature optimization is the root of all evils."  
 > \- Donald Knuth
 
 ## Managers and QuerySets
 
-`ModelName.objects` is a `Manager` object which is basically an interface to the DB.  
+`ModelName.objects` is a `Manager` object, which is basically an interface to the DB.  
 It has methods to query the DB like `.all()`, `.get()`, `.filter()`, `.exclude()`. (These are the most used ones.)
 
 https://docs.djangoproject.com/en/5.2/topics/db/queries/#retrieving-objects
 
-`all`, `filter`, `exclude` returns a [QuerySet](https://docs.djangoproject.com/en/5.2/ref/models/querysets/#django.db.models.query.QuerySet) object.  
+`all`, `filter`, `exclude` return a [QuerySet](https://docs.djangoproject.com/en/5.2/ref/models/querysets/#django.db.models.query.QuerySet) object.  
 `get` returns the single object directly.
 
 ### [`QuerySet`s are lazy](https://docs.djangoproject.com/en/5.2/topics/db/queries/#querysets-are-lazy)
 
-`QuerySet` is not actually a `set` as the name might indicate, it actually works just like an `Iterator` object.  
-Meaning, it evaluates the result (execute DB query) on the go when we actually access the value.
+`QuerySet` is not actually a `set` as the name might indicate. It actually works just like an `Iterator` object.  
+Meaning, it evaluates the result (executes DB query) on the go when we actually access the value.
 
 Why?  
-Because we frequently chain methods like following in order to mimic a complex/nested query:
+Because we frequently chain methods like the following to mimic a complex/nested query:
 
 ```py
 qs = ModelName.objects.all()
 print(qs.filter().order_by().get())
 ```
 
-If `QuerySet` were not lazy, then first query would form, result will return (all millions of data) in the memory, and then next query will apply on that.  
+If `QuerySet` were not lazy, then the first query would form, result would return (all millions of data) into memory, and then the next query would apply on that.  
 That's very inefficient.
 Hence, what actually happens is Django forms the actual SQL query using all the chained methods, and directly forms the actual complex/nested query that we were meant.
 
@@ -74,8 +74,8 @@ Check the code here: https://github.com/django/django/blame/main/django/db/model
 Here's the commit in which this was added: https://github.com/django/django/commit/330638b89f14e1fb06e9d313ccc9768ae167c53f
 
 Reason:
-`21` is a random/arbitrary number, and it's there as a safeguard if someone mistakenly get a result that returns millions of records, that can freeze the app.  
-Hence, Django only fetches at most 21 records, and then raise `MultipleObjectsReturned` exception. (Meaning Django could've just used `LIMIT 2` to verify, but they probably did it for fun.)
+`21` is a random/arbitrary number, and it's there as a safeguard if someone mistakenly gets a result that returns millions of records, which can freeze the app.  
+Hence, Django only fetches at most 21 records, and then raises `MultipleObjectsReturned` exception. (Meaning Django could've just used `LIMIT 2` to verify, but they probably did it for fun.)
 
 ## Filtering Objects
 
@@ -95,7 +95,7 @@ E.g.:
 unit_price__gt=20
 ```
 
-We can also use `__` for nested lookups, e.g., `product` is a foreign key (of any type), and the `Product` table has a field `collection`, we can do: `product__collection`.
+We can also use `__` for nested lookups. E.g., `product` is a foreign key (of any type), and the `Product` table has a field `collection`. We can do: `product__collection`.
 
 Check the code in `playground.views.home`.
 
@@ -175,7 +175,7 @@ Solves classic **N+1 query problem**:
 
 > Note:  
 > Use `select_related` or `prefetch_related` when you plan to access related objects via ORM attributes in Python after the query.  
-> For queries that only retrieve raw fields from related tables (e.g., using .values(), .annotate()), Django generates the necessary SQL joins for those fields automatically.
+> For queries that only retrieve raw fields from related tables (e.g., using `.values()`, `.annotate()`), Django generates the necessary SQL joins for those fields automatically.
 
 Check the code and **important points** in `playground.views.home`.
 
@@ -185,11 +185,11 @@ Check the code and **important points** in `playground.views.home`.
 
 > [Researched entirely by me.]
 
-```python
+```py
 Product.objects.prefetch_related('promotions').all()
 ```
 
-Should generate following, right:
+Should generate the following, right?
 
 ```sql
 SELECT *
@@ -200,7 +200,7 @@ ON p.id = j.product_id
 
 > See [example](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%201/2.%20Building%20a%20Data%20Model.md#a-concrete-example-students--courses).
 
-But, it generates:
+But it generates:
 
 ```sql
 SELECT "store_product"."id",
@@ -222,7 +222,8 @@ WHERE "store_product_promotions"."product_id" IN (<ids from above query>)
 
 Doesn't appear to make sense, right? But:
 
-Django's `prefetch_related` uses two queries because it is more efficient than a single `JOIN`. It avoids the primary performance bottleneck: **duplicating the main table's data**. It achieves this by fetching the main objects first, then fetching all related objects in a second targeted query, and finally stitching the data together in Python. This approach minimizes data transfer and simplifies object creation.
+Django's `prefetch_related` uses two queries because it is more efficient than a single `JOIN`. It avoids the primary performance bottleneck: **duplicating the main table's data**.
+It achieves this by fetching the main objects first, then fetching all related objects in a second targeted query, and finally stitching the data together in Python. This approach minimizes data transfer and simplifies object creation.
 
 For explanation, read the last responses in the chats:
 
@@ -253,8 +254,8 @@ https://docs.djangoproject.com/en/5.2/ref/models/querysets/#annotate
 
 If a lookup type name (like `count`) is the same as a field name, **Django will always treat it as the field name**. To use the `Count` aggregate function for counting related objects, you must explicitly use `annotate()` with `from django.db.models import Count`.
 
-- `filter(product__count__gt=5)`: Filters based on the **value of the `count` field** on the `Product` model.
-- `annotate(c=Count('product')).filter(c__gt=5)`: Filters based on the **number of related `product` objects**.
+- `filter(product__count__gt=5)` — Filters based on the **value of the `count` field** on the `Product` model.
+- `annotate(c=Count('product')).filter(c__gt=5)` — Filters based on the **number of related `product` objects**.
 
 Read: https://g.co/gemini/share/d8c6d112540b
 
@@ -277,16 +278,17 @@ https://docs.djangoproject.com/en/5.2/ref/models/database-functions
 
 If we want to see number of orders each customer has placed:
 
-`Customer.objects.annotate(Count("order_set"))` - `FieldError`
-
-`Customer.objects.annotate(Count("order"))` - Correct
+```py
+Customer.objects.annotate(Count("order_set"))  # FieldError
+Customer.objects.annotate(Count("order"))      # Correct
+```
 
 Why?
 
 > (Researched by me.)
 
-`order_set` is a Python-level manager accessor  
-`order` is database-level relationship name
+- `order_set` is a Python-level manager accessor
+- `order` is the database-level relationship name
 
 Read here:
 
@@ -305,13 +307,14 @@ Check the code in `playground.views.home`.
 
 > In our project, the generic, decoupled model we've is `TaggedItem`.
 
-First we need to get the content type object using following, since `TaggedItem` table is not linked to any model, so it can contain multiple models, I mean tagged item can be a product, and also a collection at the same time.
+First, we need to get the content type object using:
+Since `TaggedItem` table is not linked to any model, it can contain multiple models. I mean, tagged item can be a product and also a collection at the same time.
 
 ```py
 ContentType.objects.get_for_model(<ModelName>)
 ```
 
-And then we can query `TaggedItem` for a product.
+Then we can query `TaggedItem` for a product.
 
 Check the code in `playground.views.home`.
 
@@ -319,7 +322,7 @@ Check the code in `playground.views.home`.
 
 ## Custom Managers
 
-Now, as you might've noticed after looking the code of above section, requiring to do that every single time is very repetitive.
+Now, as you might've noticed after looking at the code of above section, requiring to do that every single time is very repetitive.
 
 There comes this. Check the code in `tags.models` & `playground.views.home`.
 
@@ -359,7 +362,7 @@ Check the code in `playground.views.home`.
 
 ## Transactions
 
-> In a transaction, either all the queries should be successful, if even one fail, all the other are rollback-ed as well.
+> In a transaction, either all the queries should be successful. If even one fails, all the others are rollback-ed as well.
 
 https://docs.djangoproject.com/en/5.2/topics/db/transactions
 
@@ -367,7 +370,7 @@ Check the code in `playground.views.home`.
 
 ## Executing Raw SQL Queries
 
-Sometimes using ORM can become complex or slow, at that time, we can just write SQL ourselves.
+Sometimes using ORM can become complex or slow. At that time, we can just write SQL ourselves.
 
 ```py
 Model.objects.raw(raw_query)
@@ -375,7 +378,7 @@ Model.objects.raw(raw_query)
 
 > QuerySet vs. RawQuerySet: https://g.co/gemini/share/2222a9d92831
 
-Also, it's better to use stored procedures instead of writing SQL in the middle of Python code especially for routine query.
+Also, it's better to use stored procedures instead of writing SQL in the middle of Python code, especially for routine queries.
 
 ```py
 django.db.connection.cursor().callproc()
