add some more notes in previous sections

--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -104,6 +104,16 @@ Better:
 
 <br>
 
+Add `psql` to `PATH` (in `/Users/samyak/.zprofile`):
+
+```bash
+export PATH="/Applications/Postgres.app/Contents/Versions/17/bin:$PATH"
+```
+
+(This is the default install location on mac, change version if required.)
+
+<br>
+
 In DataGrip:
 
 1. Create / open a project (basically a dir)
@@ -166,3 +176,31 @@ And then `migrate` to create the tables in our new Postgres DB.
 ## Generating Dummy Data
 
 https://www.mockaroo.com
+
+> Run `seed.sql` given in the course to populate the data. (Delete all the previous data first.)
+
+### Resetting auto-id
+
+When we populates the data from outside, auto-id sequence may not be updated with the data, and `IntegrityError` arises while inserting a new record if the id pre-exists.
+
+To solve this, update the id seq:
+
+1. Make sure `psql` is added to `PATH`, check [above](/Notes/Part%201/3.%20Setting%20Up%20the%20Database.md#installing-mysql-postgresql--connecting-to-mysql-postgresql).
+
+2. In the project path, do:
+
+   ```bash
+   python manage.py dbshell
+   ```
+
+3. Get the actual max id in the DB:
+
+   ```bash
+   SELECT MAX(id) FROM <app_name>_<modelname>;
+   ```
+
+4. Update:
+
+   ```bash
+   ALTER SEQUENCE <app_name>_<modelname>_id_seq RESTART WITH <max_id_from_above>+1;
+   ```
