--- a/Notes/Part 1/4. Django ORM.md
+++ b/Notes/Part 1/4. Django ORM.md
@@ -198,7 +198,7 @@ INNER JOIN store_product_promotions j
 ON p.id = j.product_id
 ```
 
-> See [example](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%201/2.%20Building%20a%20Data%20Model.md#a-concrete-example-students--courses).
+> See [example](/Notes/Part%201/2.%20Building%20a%20Data%20Model.md#a-concrete-example-students--courses).
 
 But it generates:
 
